# ntu-weather

./: .gitignore  Procfile  README.md  index.py  pyproject.toml  requirements.txt  weather.py
app/: README.md  index.py  models.py  utils.py
app/views/: index.tpl
assets/: weather.css
ntuweather/: __init__.py  exceptions.py  models.py  providers.py  weather.py
site/: index.py
site/views/: index.html
views/: index.html  index.tpl
